--- a/index.html
+++ b/index.html
@@ -127,9 +127,14 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <a href="./">
-                    <h1>YALA<span> SAFARI</span></h1>
-                </a>
+                <div class="row">
+                    <a href="./">
+                        <div class="col" style="display: flex; align-items: center; gap: 12px;">
+                            <img src="./image.png" alt="YALA SAFARI Logo" style="height: 48px;">
+                            <h1 style="margin: 0;">YALA<span> SAFARI</span></h1>
+                        </div>
+                    </a>
+                </div>
             </div>
             <nav>
                 <ul>
