update package details

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                             <li><i class="fas fa-camera"></i> Photography opportunities</li>
                             <li><i class="fas fa-utensils"></i> Snacks & drinks included</li>
                         </ul>
-                        <div class="package-price">$50 <span>per person</span></div>
+                        <div class="package-price">$50 <span>per jeep</span></div>
                         <a href="#booking" class="btn">Book Now</a>
                     </div>
                 </div>
@@ -203,7 +203,7 @@
                             <li><i class="fas fa-camera"></i> Professional photography guidance</li>
                             <li><i class="fas fa-utensils"></i> Lunch & refreshments included</li>
                         </ul>
-                        <div class="package-price">$98 <span>per person</span></div>
+                        <div class="package-price">$98 <span>per jeep</span></div>
                         <a href="#booking" class="btn">Book Now</a>
                     </div>
                 </div>
@@ -221,7 +221,7 @@
                             <li><i class="fas fa-hotel"></i> Luxury safari jeeps</li>
                             <li><i class="fas fa-utensils"></i> Breakfast included</li>
                         </ul>
-                        <div class="package-price">$68 <span>per person</span></div>
+                        <div class="package-price">$68 <span>per jeep</span></div>
                         <a href="#booking" class="btn">Book Now</a>
                     </div>
                 </div>
